Work for https://github.com/surveyjs/survey-library/issues/5507 - Survey shifts when scrollbar appears - reserve place for scroll bar in safari

--- a/packages/survey-creator-core/src/components/simulator.scss
+++ b/packages/survey-creator-core/src/components/simulator.scss
@@ -115,6 +115,7 @@
 
   &.svd-simulator-main--desktop {
     min-height: auto;
+
     &.svd-simulator-main--running {
       height: 100%;
     }
@@ -141,4 +142,12 @@
   height: 100%;
   overflow: auto;
   overflow-y: overlay;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+
+  ::i-block-chrome,
+  .svd-simulator-content {
+    overflow-y: scroll;
+  }
 }
